<?xml version="1.0"?>
<package>
  <name>simple_robot_demo</name>
  <version>0.1.1</version>
  <description>simple_robot demo in gazebo</description>
  <maintainer email="wxue2012@gmail.com">Weiyu</maintainer>
  <license>MIT</license>
  <author  email="wxue2012@gmail.com">Weiyu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>simple_robot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
