<package>
  <name>simple_robot_gazebo</name>
  <version>0.1.1</version>
  <description>simple_robot_gazebo</description>
  <maintainer email="wxue2012@gmail.com">Weiyu</maintainer>
  <license>MIT</license>
  <author  email="wxue2012@gmail.com">Weiyu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>simple_robot_description</run_depend>
  <run_depend>xacro</run_depend>
</package>
